# aoc2024

./: .editorconfig  .gitignore  Cargo.toml
.github/workflows/: bench.yml
benches/: criterion.rs  iai.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: all.rs  d1.rs  lib.rs  main.rs  util.rs
src/all/: d1.jq  d1.rs  d2.jq  d2.rs  d3.jq  d3.rs  d4.rs  d5.rs  d6.rs  d7.jq  d7.rs  d8.rs  d9.rs
