[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitvec = "1.0.1"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
jq-rs = { version = "0.4.1", features = ["bundled"] }
paste = "1.0.15"
reqwest = { version = "0.12.9", features = ["blocking"] }
simd-json = "0.14.3"

[patch.crates-io]
jq-src = { git = "https://github.com/SOF3/jq-src", rev = "refs/tags/jq-1.7.1" }

[[bench]]
name = "main"
harness = false
